--- a/notify_client_android/2.0/demo/src/main/res/layout/fl_me_container.xml
+++ b/notify_client_android/2.0/demo/src/main/res/layout/fl_me_container.xml
@@ -16,55 +16,14 @@
             android:id="@+id/tv_btn_settings"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:background="?attr/selectableItemBackground"
+            android:drawableLeft="@drawable/ic_settings_grey_500_24dp"
+            android:drawablePadding="16dp"
+            android:drawableRight="@drawable/fragmentation_ic_right"
             android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:text="@string/settings"
-            android:drawablePadding="16dp"
-            android:textSize="16sp"
-            android:background="?attr/selectableItemBackground"
-            android:drawableLeft="@drawable/ic_settings_grey_500_24dp"
-            android:paddingLeft="16dp"
-            android:drawableRight="@drawable/fragmentation_ic_right"
-            android:paddingRight="16dp"/>
-
-        <TextView
-            android:id="@+id/tv_btn_single_market_alert"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_vertical"
-            android:text="@string/single_market_alert"
-            android:drawablePadding="16dp"
-            android:textSize="16sp"
-            android:background="?attr/selectableItemBackground"
-            android:drawableLeft="@drawable/ic_settings_grey_500_24dp"
-            android:paddingLeft="16dp"
-            android:drawableRight="@drawable/fragmentation_ic_right"
-            android:paddingRight="16dp"/>
-
-        <TextView
-            android:id="@+id/tv_btn_market_spread_alert"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_vertical"
-            android:text="@string/market_spread_alert"
-            android:drawablePadding="16dp"
-            android:textSize="16sp"
-            android:background="?attr/selectableItemBackground"
-            android:drawableLeft="@drawable/ic_settings_grey_500_24dp"
-            android:paddingLeft="16dp"
-            android:drawableRight="@drawable/fragmentation_ic_right"
-            android:paddingRight="16dp"/>
-        <TextView
-            android:id="@+id/tv_btn_alert_list"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_vertical"
-            android:text="@string/alert_list"
-            android:drawablePadding="16dp"
-            android:textSize="16sp"
-            android:background="?attr/selectableItemBackground"
-            android:drawableLeft="@drawable/ic_settings_grey_500_24dp"
-            android:paddingLeft="16dp"
-            android:drawableRight="@drawable/fragmentation_ic_right"
-            android:paddingRight="16dp"/>
+            android:textSize="16sp" />
     </LinearLayout>
 </FrameLayout>
