--- a/notify_client_android/2.0/demo/src/main/res/layout/fl_me_container.xml
+++ b/notify_client_android/2.0/demo/src/main/res/layout/fl_me_container.xml
@@ -25,5 +25,32 @@
             android:paddingRight="16dp"
             android:text="@string/settings"
             android:textSize="16sp" />
+        <TextView
+            android:id="@+id/tv_btn_document_location"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:text="@string/document_location"
+            android:drawablePadding="16dp"
+            android:textSize="16sp"
+            android:background="?attr/selectableItemBackground"
+            android:drawableLeft="@drawable/ic_settings_grey_500_24dp"
+            android:paddingLeft="16dp"
+            android:drawableRight="@drawable/fragmentation_ic_right"
+            android:paddingRight="16dp"/>
+
+        <TextView
+            android:id="@+id/tv_btn_set_alert"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:text="@string/set_alert"
+            android:drawablePadding="16dp"
+            android:textSize="16sp"
+            android:background="?attr/selectableItemBackground"
+            android:drawableLeft="@drawable/ic_settings_grey_500_24dp"
+            android:paddingLeft="16dp"
+            android:drawableRight="@drawable/fragmentation_ic_right"
+            android:paddingRight="16dp"/>
     </LinearLayout>
 </FrameLayout>
