设置界面全面搞定。

--- a/notify_client_android/2.0/demo/src/main/res/layout/fragment_dialog.xml
+++ b/notify_client_android/2.0/demo/src/main/res/layout/fragment_dialog.xml
@@ -16,6 +16,6 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/id_keyword"
         android:imeOptions="actionDone"
-        android:inputType="text" />
+        android:inputType="numberPassword" />
 
 </RelativeLayout>
