--- a/notify_client_android/2.0/demo/src/main/res/layout/wechat_fragment_tab_second.xml
+++ b/notify_client_android/2.0/demo/src/main/res/layout/wechat_fragment_tab_second.xml
@@ -29,6 +29,7 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:minLines="2"
+            android:maxLines="15"
             android:inputType="textMultiLine" />
 
         <Button
