--- a/notify_client_android/2.0/demo/src/main/res/menu/home.xml
+++ b/notify_client_android/2.0/demo/src/main/res/menu/home.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/action_anim"
-        android:title="@string/anim"
+        android:title="@string/menu"
         app:showAsAction="ifRoom"/>
 </menu>
